fix APIs-1165